--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
-    "name": "6by6/freeagent-php",
-    "description": "A wrapper for the freeagent API",
+    "name": "brunodebarros/freeagent-php",
+    "description": "A modern, maintained wrapper for the freeagent API.",
     "type": "library",
     "license": "MIT",
     "authors": [
+        {
+            "name": "Bruno Moreira De Barros",
+            "email": "bruno@terraduo.com"
+        },
         {
             "name": "Daniel Ness",
             "email": "daniel@sixbysix.co.uk"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "league/oauth2-client": "^1.2",
-        "jms/serializer": "^1.1"
+        "league/oauth2-client": "^2.6",
+        "jms/serializer": "^3.12"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.1"
+        "phpunit/phpunit": "^9"
     },
-    "autoload" : {
-        "psr-4" : {
-            "SixBySix\\Freeagent\\" : ""
+    "autoload": {
+        "psr-4": {
+            "SixBySix\\Freeagent\\": ""
         }
     }
 }
