--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         }
     ],
     "require": {
+        "php": "^7.3",
         "league/oauth2-client": "^2.6",
-        "jms/serializer": "^3.12"
+        "jms/serializer": "^3.12",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
