--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 | ^8.0",
         "league/oauth2-client": "^2.6",
         "jms/serializer": "^3.12",
         "ext-json": "*"
