--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": "^7.3 | ^8.0",
         "league/oauth2-client": "^2.6",
         "jms/serializer": "^3.12",
-        "ext-json": "*"
+        "ext-json": "*",
+        "spatie/guzzle-rate-limiter-middleware": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
